Bug 358679 - kmail5 crash on reload when config to empty trash on exit
Summary: kmail5 crash on reload when config to empty trash on exit
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2016-01-28 12:32 UTC by Ian
Modified: 2016-07-14 11:04 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.3
Sentry Crash Report:


Attachments
strace of failure to reload kmail (375.95 KB, text/plain)
2016-04-30 12:24 UTC, Ian
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ian 2016-01-28 12:32:41 UTC
Application: kmail (5.1.1)

Qt Version: 5.5.1
Operating System: Linux 4.4.0-1-default x86_64
Distribution: "openSUSE Tumbleweed (20160117) (x86_64)"

-- Information about the crash:
I had been using newly installed kmail5, i change config to empty trash on exit, saved it, exited via File menu.  It crashed on reloading.  i relaoded to check teh trash was beiung emptied

-- Backtrace:
Application: KMail (kmail), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fd1b08ab940 (LWP 32054))]

Thread 11 (Thread 0x7fd18b675700 (LWP 32055)):
#0  0x00007fd1ad8e024d in poll () from /lib64/libc.so.6
#1  0x00007fd1a0916432 in ?? () from /usr/lib64/libxcb.so.1
#2  0x00007fd1a0918007 in xcb_wait_for_event () from /usr/lib64/libxcb.so.1
#3  0x00007fd18d39de29 in QXcbEventReader::run (this=0x1067450) at qxcbconnection.cpp:1229
#4  0x00007fd1ae1e894f in QThreadPrivate::start (arg=0x1067450) at thread/qthread_unix.cpp:331
#5  0x00007fd1a3c784a4 in start_thread () from /lib64/libpthread.so.0
#6  0x00007fd1ad8e8bdd in clone () from /lib64/libc.so.6

Thread 10 (Thread 0x7fd18936d700 (LWP 32068)):
#0  0x00007fd1ad8e024d in poll () from /lib64/libc.so.6
#1  0x00007fd1a375b264 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007fd1a375b36c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007fd1ae40d52b in QEventDispatcherGlib::processEvents (this=0x7fd17c0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:420
#4  0x00007fd1ae3b763a in QEventLoop::exec (this=this@entry=0x7fd18936cc90, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#5  0x00007fd1ae1e3b1c in QThread::exec (this=<optimized out>) at thread/qthread.cpp:503
#6  0x00007fd1ae1e894f in QThreadPrivate::start (arg=0x10ea510) at thread/qthread_unix.cpp:331
#7  0x00007fd1a3c784a4 in start_thread () from /lib64/libpthread.so.0
#8  0x00007fd1ad8e8bdd in clone () from /lib64/libc.so.6

Thread 9 (Thread 0x7fd16d30f700 (LWP 32091)):
#0  0x00007fd1a3c7e07f in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fd19e7813bb in ?? () from /usr/lib64/libQt5WebKit.so.5
#2  0x00007fd19e7813f9 in ?? () from /usr/lib64/libQt5WebKit.so.5
#3  0x00007fd1a3c784a4 in start_thread () from /lib64/libpthread.so.0
#4  0x00007fd1ad8e8bdd in clone () from /lib64/libc.so.6

Thread 8 (Thread 0x7fd114a0d700 (LWP 32099)):
#0  0x00007fd1a3c7e07f in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fd19e48f764 in ?? () from /usr/lib64/libQt5WebKit.so.5
#2  0x00007fd19e7b0441 in ?? () from /usr/lib64/libQt5WebKit.so.5
#3  0x00007fd1a3c784a4 in start_thread () from /lib64/libpthread.so.0
#4  0x00007fd1ad8e8bdd in clone () from /lib64/libc.so.6

Thread 7 (Thread 0x7fd107fff700 (LWP 32100)):
#0  0x00007fd1a3c7e07f in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fd19e490793 in ?? () from /usr/lib64/libQt5WebKit.so.5
#2  0x00007fd19e7b0441 in ?? () from /usr/lib64/libQt5WebKit.so.5
#3  0x00007fd1a3c784a4 in start_thread () from /lib64/libpthread.so.0
#4  0x00007fd1ad8e8bdd in clone () from /lib64/libc.so.6

Thread 6 (Thread 0x7fd10519e700 (LWP 32122)):
#0  0x00007fd1a379e4b9 in g_mutex_lock () from /usr/lib64/libglib-2.0.so.0
#1  0x00007fd1a375a2d0 in g_main_context_acquire () from /usr/lib64/libglib-2.0.so.0
#2  0x00007fd1a375b135 in ?? () from /usr/lib64/libglib-2.0.so.0
#3  0x00007fd1a375b36c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#4  0x00007fd1ae40d52b in QEventDispatcherGlib::processEvents (this=0x7fd0f8007400, flags=...) at kernel/qeventdispatcher_glib.cpp:420
#5  0x00007fd1ae3b763a in QEventLoop::exec (this=this@entry=0x7fd10519dc90, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#6  0x00007fd1ae1e3b1c in QThread::exec (this=<optimized out>) at thread/qthread.cpp:503
#7  0x00007fd1ae1e894f in QThreadPrivate::start (arg=0x1716540) at thread/qthread_unix.cpp:331
#8  0x00007fd1a3c784a4 in start_thread () from /lib64/libpthread.so.0
#9  0x00007fd1ad8e8bdd in clone () from /lib64/libc.so.6

Thread 5 (Thread 0x7fd10599f700 (LWP 32124)):
#0  0x00007ffe801ce999 in ?? ()
#1  0x00007ffe801cecc5 in clock_gettime ()
#2  0x00007fd1ad8f57d6 in clock_gettime () from /lib64/libc.so.6
#3  0x00007fd1ae2941a6 in qt_clock_gettime (ts=0x7fd10599ea40, clock=<optimized out>) at tools/qelapsedtimer_unix.cpp:105
#4  do_gettime (frac=<synthetic pointer>, sec=<synthetic pointer>) at tools/qelapsedtimer_unix.cpp:156
#5  qt_gettime () at tools/qelapsedtimer_unix.cpp:165
#6  0x00007fd1ae40b0e9 in QTimerInfoList::updateCurrentTime (this=this@entry=0x1559cc0) at kernel/qtimerinfo_unix.cpp:84
#7  0x00007fd1ae40b5f5 in QTimerInfoList::timerWait (this=0x1559cc0, tm=...) at kernel/qtimerinfo_unix.cpp:381
#8  0x00007fd1ae40c98e in timerSourcePrepareHelper (timeout=0x7fd10599eaf4, src=<optimized out>) at kernel/qeventdispatcher_glib.cpp:127
#9  timerSourcePrepare (source=<optimized out>, timeout=0x7fd10599eaf4) at kernel/qeventdispatcher_glib.cpp:160
#10 0x00007fd1a375a88d in g_main_context_prepare () from /usr/lib64/libglib-2.0.so.0
#11 0x00007fd1a375b193 in ?? () from /usr/lib64/libglib-2.0.so.0
#12 0x00007fd1a375b36c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#13 0x00007fd1ae40d52b in QEventDispatcherGlib::processEvents (this=0x17122c0, flags=...) at kernel/qeventdispatcher_glib.cpp:420
#14 0x00007fd1ae3b763a in QEventLoop::exec (this=this@entry=0x7fd10599ec90, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#15 0x00007fd1ae1e3b1c in QThread::exec (this=<optimized out>) at thread/qthread.cpp:503
#16 0x00007fd1ae1e894f in QThreadPrivate::start (arg=0x1708750) at thread/qthread_unix.cpp:331
#17 0x00007fd1a3c784a4 in start_thread () from /lib64/libpthread.so.0
#18 0x00007fd1ad8e8bdd in clone () from /lib64/libc.so.6

Thread 4 (Thread 0x7fd106bfd700 (LWP 32126)):
#0  0x00007fd1ad8e024d in poll () from /lib64/libc.so.6
#1  0x00007fd1a375b264 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007fd1a375b36c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007fd1ae40d52b in QEventDispatcherGlib::processEvents (this=0x7fd0f8000a20, flags=...) at kernel/qeventdispatcher_glib.cpp:420
#4  0x00007fd1ae3b763a in QEventLoop::exec (this=this@entry=0x7fd106bfcc90, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#5  0x00007fd1ae1e3b1c in QThread::exec (this=<optimized out>) at thread/qthread.cpp:503
#6  0x00007fd1ae1e894f in QThreadPrivate::start (arg=0x13dd070) at thread/qthread_unix.cpp:331
#7  0x00007fd1a3c784a4 in start_thread () from /lib64/libpthread.so.0
#8  0x00007fd1ad8e8bdd in clone () from /lib64/libc.so.6

Thread 3 (Thread 0x7fd1827fc700 (LWP 32128)):
#0  0x00007fd1ad8dc22d in read () from /lib64/libc.so.6
#1  0x00007fd1a379d210 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007fd1a375ad94 in g_main_context_check () from /usr/lib64/libglib-2.0.so.0
#3  0x00007fd1a375b208 in ?? () from /usr/lib64/libglib-2.0.so.0
#4  0x00007fd1a375b36c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#5  0x00007fd1ae40d52b in QEventDispatcherGlib::processEvents (this=0x12970c0, flags=...) at kernel/qeventdispatcher_glib.cpp:420
#6  0x00007fd1ae3b763a in QEventLoop::exec (this=this@entry=0x7fd1827fbc90, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#7  0x00007fd1ae1e3b1c in QThread::exec (this=<optimized out>) at thread/qthread.cpp:503
#8  0x00007fd1ae1e894f in QThreadPrivate::start (arg=0x130a540) at thread/qthread_unix.cpp:331
#9  0x00007fd1a3c784a4 in start_thread () from /lib64/libpthread.so.0
#10 0x00007fd1ad8e8bdd in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7fd183fff700 (LWP 32130)):
#0  0x00007fd1a379d224 in ?? () from /usr/lib64/libglib-2.0.so.0
#1  0x00007fd1a375ad94 in g_main_context_check () from /usr/lib64/libglib-2.0.so.0
#2  0x00007fd1a375b208 in ?? () from /usr/lib64/libglib-2.0.so.0
#3  0x00007fd1a375b36c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#4  0x00007fd1ae40d52b in QEventDispatcherGlib::processEvents (this=0x7fd0f8003c10, flags=...) at kernel/qeventdispatcher_glib.cpp:420
#5  0x00007fd1ae3b763a in QEventLoop::exec (this=this@entry=0x7fd183ffec90, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#6  0x00007fd1ae1e3b1c in QThread::exec (this=<optimized out>) at thread/qthread.cpp:503
#7  0x00007fd1ae1e894f in QThreadPrivate::start (arg=0x17d3700) at thread/qthread_unix.cpp:331
#8  0x00007fd1a3c784a4 in start_thread () from /lib64/libpthread.so.0
#9  0x00007fd1ad8e8bdd in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7fd1b08ab940 (LWP 32054)):
[KCrash Handler]
#6  size (this=0x10) at /usr/include/qt5/QtCore/qlist.h:105
#7  count (this=0x10) at /usr/include/qt5/QtCore/qlist.h:314
#8  KMail::UndoStack::size (this=0x0) at /usr/src/debug/kdepim-15.12.1/kmail/undostack.cpp:58
#9  0x00007fd1b013440c in KMMainWidget::updateMessageActionsDelayed (this=this@entry=0x1394d90) at /usr/src/debug/kdepim-15.12.1/kmail/kmmainwidget.cpp:3849
#10 0x00007fd1b0134cb3 in KMMainWidget::updateMessageActions (this=this@entry=0x1394d90, fast=fast@entry=false) at /usr/src/debug/kdepim-15.12.1/kmail/kmmainwidget.cpp:3681
#11 0x00007fd1b01452c1 in KMMainWidget::setupActions (this=this@entry=0x1394d90) at /usr/src/debug/kdepim-15.12.1/kmail/kmmainwidget.cpp:3422
#12 0x00007fd1b014976b in KMMainWidget::KMMainWidget (this=0x1394d90, parent=<optimized out>, aGUIClient=0x14fc2d0, actionCollection=0x11a3a40, config=...) at /usr/src/debug/kdepim-15.12.1/kmail/kmmainwidget.cpp:256
#13 0x00007fd1b00f7662 in KMMainWin::KMMainWin (this=0x14fc260, __in_chrg=<optimized out>, __vtt_parm=<optimized out>) at /usr/src/debug/kdepim-15.12.1/kmail/kmmainwin.cpp:61
#14 0x00007fd1b01081c7 in KMKernel::openReader (this=this@entry=0x7ffe801143c0, onlyCheck=onlyCheck@entry=false) at /usr/src/debug/kdepim-15.12.1/kmail/kmkernel.cpp:522
#15 0x00007fd1b0112c7c in KMKernel::action (this=this@entry=0x7ffe801143c0, mailto=mailto@entry=false, check=check@entry=false, to=..., cc=..., bcc=..., subj=..., body=..., messageFile=..., attachURLs=..., customHeaders=..., replyTo=..., inReplyTo=...) at /usr/src/debug/kdepim-15.12.1/kmail/kmkernel.cpp:1461
#16 0x00007fd1b01141e3 in KMKernel::handleCommandLine (this=0x7ffe801143c0, noArgsOpensReader=noArgsOpensReader@entry=true, args=..., workingDir=...) at /usr/src/debug/kdepim-15.12.1/kmail/kmkernel.cpp:425
#17 0x0000000000404f03 in KMailApplication::activate (this=0x7ffe801143a0, args=..., workindDir=...) at /usr/src/debug/kdepim-15.12.1/kmail/main.cpp:95
#18 0x00007fd1b050e97e in KontactInterface::PimUniqueApplication::newInstance (this=0x7ffe801143a0, startupId=..., arguments=..., workingDirectory=...) at /usr/src/debug/kontactinterface-15.12.1/src/pimuniqueapplication.cpp:164
#19 0x00007fd1b050fa72 in KontactInterface::PimUniqueApplication::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=0x7ffe801134f0) at /usr/src/debug/kontactinterface-15.12.1/build/src/moc_pimuniqueapplication.cpp:84
#20 0x00007fd1b050fdc3 in KontactInterface::PimUniqueApplication::qt_metacall (this=0x7ffe801143a0, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0x7ffe801134f0) at /usr/src/debug/kontactinterface-15.12.1/build/src/moc_pimuniqueapplication.cpp:117
#21 0x00007fd1ac8be433 in QDBusConnectionPrivate::deliverCall (this=this@entry=0x10a8530, object=object@entry=0x7ffe801143a0, msg=..., metaTypes=..., slotIdx=30) at qdbusintegrator.cpp:978
#22 0x00007fd1ac8c1fd0 in QDBusConnectionPrivate::activateCall (this=this@entry=0x10a8530, object=0x7ffe801143a0, flags=81, msg=...) at qdbusintegrator.cpp:885
#23 0x00007fd1ac8c292b in QDBusConnectionPrivate::activateObject (this=0x10a8530, node=..., msg=..., pathStartPos=<optimized out>) at qdbusintegrator.cpp:1486
#24 0x00007fd1ac8c3bbe in QDBusActivateObjectEvent::placeMetaCall (this=0x1645aa0) at qdbusintegrator.cpp:1580
#25 0x00007fd1ae3e7d79 in QObject::event (this=this@entry=0x7ffe801143a0, e=e@entry=0x1645aa0) at kernel/qobject.cpp:1239
#26 0x00007fd1ae3bf24c in QCoreApplication::event (this=this@entry=0x7ffe801143a0, e=e@entry=0x1645aa0) at kernel/qcoreapplication.cpp:1728
#27 0x00007fd1ae8fa1f4 in QGuiApplication::event (this=this@entry=0x7ffe801143a0, e=e@entry=0x1645aa0) at kernel/qguiapplication.cpp:1546
#28 0x00007fd1af57dec8 in QApplication::event (this=0x7ffe801143a0, e=0x1645aa0) at kernel/qapplication.cpp:2074
#29 0x00007fd1af57a8cc in QApplicationPrivate::notify_helper (this=this@entry=0x1043720, receiver=receiver@entry=0x7ffe801143a0, e=e@entry=0x1645aa0) at kernel/qapplication.cpp:3716
#30 0x00007fd1af57f9d6 in QApplication::notify (this=0x7ffe801143a0, receiver=0x7ffe801143a0, e=0x1645aa0) at kernel/qapplication.cpp:3499
#31 0x00007fd1ae3b9cf3 in QCoreApplication::notifyInternal (this=0x7ffe801143a0, receiver=0x7ffe801143a0, event=event@entry=0x1645aa0) at kernel/qcoreapplication.cpp:965
#32 0x00007fd1ae3bc016 in sendEvent (event=0x1645aa0, receiver=<optimized out>) at kernel/qcoreapplication.h:224
#33 QCoreApplicationPrivate::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x103ea70) at kernel/qcoreapplication.cpp:1593
#34 0x00007fd1ae3bc4f8 in QCoreApplication::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1451
#35 0x00007fd1ae40d103 in postEventSourceDispatch (s=0x1098600) at kernel/qeventdispatcher_glib.cpp:271
#36 0x00007fd1a375b097 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#37 0x00007fd1a375b2c8 in ?? () from /usr/lib64/libglib-2.0.so.0
#38 0x00007fd1a375b36c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#39 0x00007fd1ae40d50f in QEventDispatcherGlib::processEvents (this=0x1096bd0, flags=...) at kernel/qeventdispatcher_glib.cpp:418
#40 0x00007fd1ae3b763a in QEventLoop::exec (this=0x7ffe80113cf0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#41 0x00007fd1af1cabce in KJob::exec (this=this@entry=0x11e68e0) at /usr/src/debug/kcoreaddons-5.18.0/src/lib/jobs/kjob.cpp:199
#42 0x00007fd1b01095b2 in KMKernel::cleanup (this=this@entry=0x7ffe801143c0) at /usr/src/debug/kdepim-15.12.1/kmail/kmkernel.cpp:1410
#43 0x0000000000404522 in main (argc=1, argv=0x7ffe801145d8) at /usr/src/debug/kdepim-15.12.1/kmail/main.cpp:153

Possible duplicates by query: bug 357472.

Reported using DrKonqi
Comment 1 Ian 2016-01-28 12:42:17 UTC
kmail5 does actually load even though it gives this message.  it seems to load okay if you logout but if you try to reload kmail5 in the same session it gives the error.  if i unset the empty trash on exit, it doesn't seem to give this error.  it might be that the error is happening trying to empty the trash.
Comment 2 Ian 2016-01-28 12:47:16 UTC
It doesn't empty the trash on exit even when set.  It also says its kmail2 on the prompt for kwallet access and the bug reporter also logs it as kmail2 even though the help menu says Version 5.1.1 using:
KDE Frameworks 5.18.0
Qt 5.5.1 (built against 5.5.1)
The xcb windowing system
Comment 3 Ian 2016-04-15 06:14:21 UTC
Still an issue with kmail 5.1.90rc
Comment 4 Ian 2016-04-15 06:45:58 UTC
(In reply to Ian from comment #3)
> Still an issue with kmail 5.1.90rc

additional info 
openSUSE Tumbleweed (20160412)
KDE Frameworks 5.21.0
Qt 5.5.1 (built against 5.5.1)
Comment 5 Laurent Montel 2016-04-15 12:12:41 UTC
backtrace please as it's too different bug as first comment
Thanks
Comment 6 Ian 2016-04-15 15:09:44 UTC
(In reply to Laurent Montel from comment #5)
> backtrace please as it's too different bug as first comment
> Thanks

It doesn;t crash in a way that i can get a back trace any more so i guess the failure is different.  if i reload kmail, it shows it is loading on the taskbar then it disappears and nothing happens.  if i call up System Activity with ctrl-esc, and filter the display by inputting kmail, it shows kmail is still loaded with 5 copies of "file.so" under kdeinit5.  if i kill kmail via SystemActivity, i can then successfully reload kmail but the wastebin is still not emptied
Comment 7 Ian 2016-04-17 08:46:51 UTC
This seems totally reproducable if you have "Empty wastebin on exit" set on.
Comment 8 Laurent Montel 2016-04-17 10:12:22 UTC
so backtrace please :)
Comment 9 Ian 2016-04-17 15:06:37 UTC
How do i get a backtrace if drkonqi doesn;t come up?
Comment 10 Ian 2016-04-29 12:35:13 UTC
Problem still exists in 5.2.0.
Waste bin is not emptied on exit
Unable to reload kmail unless you go into System Activity and first kill the kmail instance that is still running.

Can anyone give me a way to create some relevant info for the developers as this error does not crash with any messages even if i run kmail from the cli
Comment 11 Ian 2016-04-30 12:03:34 UTC
I've logged the wastebin not emptying as Bug 362499
Comment 12 Ian 2016-04-30 12:24:37 UTC
Created attachment 98705 [details]
strace of failure to reload kmail

This is the trace of failure of rerunning kmail after kmail was quit previously when "Emprty wastebin on exit" is set.
Comment 13 Ian 2016-06-23 07:30:46 UTC
Still happens with Version 5.2.2, KDE Frameworks 5.23.0, QT 5.6.0
Comment 14 Laurent Montel 2016-06-30 18:42:49 UTC
Git commit 544f8cd337d7179cf51cd908f012431243760ad1 by Montel Laurent.
Committed on 30/06/2016 at 18:42.
Pushed by mlaurent into branch 'Applications/16.04'.

Fix Bug 358679 - kmail5 crash on reload when config to empty trash on exit

FIXED-IN: 5.2.3

M  +1    -6    kmail/kmkernel.cpp

http://commits.kde.org/kdepim/544f8cd337d7179cf51cd908f012431243760ad1
Comment 15 Ian 2016-07-01 08:34:09 UTC
(In reply to Laurent Montel from comment #14)
> Git commit 544f8cd337d7179cf51cd908f012431243760ad1 by Montel Laurent.
> Committed on 30/06/2016 at 18:42.
> Pushed by mlaurent into branch 'Applications/16.04'.
> 
> Fix Bug 358679 - kmail5 crash on reload when config to empty trash on exit
> 
> FIXED-IN: 5.2.3
> 
> M  +1    -6    kmail/kmkernel.cpp
> 
> http://commits.kde.org/kdepim/544f8cd337d7179cf51cd908f012431243760ad1

Great, thanks.  Does that also mean that trash is emptied on exit as well?
Comment 16 Laurent Montel 2016-07-01 10:02:24 UTC
yep it's still empty trash on exit
Comment 17 Ian 2016-07-01 13:38:36 UTC
(In reply to Laurent Montel from comment #16)
> yep it's still empty trash on exit
I've got this bug open https://bugs.kde.org/show_bug.cgi?id=362499 about trash not being emptied on exit with kmail 5.22. 
Tried it again today and it still doesn't so i'll keep it open until i've checked 5.23 which i hope will be soon.
thanks again
Comment 18 S. Umar 2016-07-06 15:56:50 UTC
There is still a bug that kmail does not stop running when you select quit from file menu. 
This is only when empty trash on exit selected. When empty trash on exit is unselected
it quits properly.
Comment 19 Ian 2016-07-14 11:01:13 UTC
kmail 5.2.3 still unable to reload unless you go into System Activity and first kill the kmail instance that is still running. (Still does not empty wastebin on exit)

Qt: 5.6.1
KDE Frameworks: 5.24.0
KDE Plasma: 5.7.1
Kernel: 4.6.3-1-default
"openSUSE Tumbleweed (20160712) (x86_64)"
Comment 20 Ian 2016-07-14 11:04:06 UTC
(In reply to Ian from comment #19)
> kmail 5.2.3 still unable to reload unless you go into System Activity and
> first kill the kmail instance that is still running. (Still does not empty
> wastebin on exit)
> 
> Qt: 5.6.1
> KDE Frameworks: 5.24.0
> KDE Plasma: 5.7.1
> Kernel: 4.6.3-1-default
> "openSUSE Tumbleweed (20160712) (x86_64)"

Sorry, it doesn't crash on exit, its the failure to reload on restarting kmail2 - I'll check for another bug report for it and create on if i can't find one.