Fix Bug 358679 - kmail5 crash on reload when config to empty trash on exit

FIXED-IN: 5.2.3
BUG: 358679